# ft_linear_regression

./: .gitignore  Makefile  README.md  pyproject.toml
src/ft_linear_regression/: linear_regression.py  models.py  utils.py
tests/: test_linear_regression.py  test_utils.py
